[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperpart-dl"
version = "0.1.0"
description = "Distributed storage simulation with deduplication, load balancing, and hypergraph modeling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "HyperPart Team", email = "info@hyperpart.dev"}
]
keywords = ["storage", "distributed-systems", "deduplication", "load-balancing", "hypergraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "networkx>=3.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.1",
    "scikit-learn>=1.3.2",
]

[project.optional-dependencies]
torch = ["torch>=2.10.0"]
dev = ["pytest>=7.0", "black>=23.0", "pylint>=2.17"]

[project.urls]
Repository = "https://github.com/example/hyperpart-dl"
Documentation = "https://hyperpart-dl.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
